--- a/cqdat/home.html
+++ b/cqdat/home.html
@@ -19,10 +19,10 @@ coderams.net used as guide
         <div id="menu">
           <ul>
             <li><a href="home.html">Home</a></li>
-            <li><a href="problems.html">Problems</a></li>
+            <li><a href="problempage.html">Problems</a></li>
             <li><a href="competitions.html">Competitions</a></li>
             <li><a href="stats.html">Statistics</a></li>
-            <li><a href="cqstrats.html">CodeQuest Strategies</a></li> 
+            <li><a href="cqstrats.html">CodeQuest Strategies</a></li>
           </ul>
         </div>
     </body>
