--- a/cqdat/home.html
+++ b/cqdat/home.html
@@ -25,5 +25,9 @@ coderams.net used as guide
             <li><a href="cqstrats.html">CodeQuest Strategies</a></li>
           </ul>
         </div>
+        <h1 id="statement">Home</h1>
+        <p id="htext">View all CodeQuest problems in one webpage!<br>Go to "Problems" to view.<br>(currently includes 2017 and 2018 packet problems -<br>2019 packet will be added as soon as it is released.)
+        <br><br><img src="pics/cqpic1.jpg" class="center" width=700 height=500>
+        <br><br><em>A CodeRams team after winning CodeQuest 2019</em>
     </body>
 </html>
