--- a/cqdat/problempage.html
+++ b/cqdat/problempage.html
@@ -27,26 +27,41 @@
       <h1 id="statement">Problems</h1>
       <div id="probs">
         <ul>
-          <li><a href="problems/001.html">Problem 001</a></li>
-          <li><a href="problems/002.html">Problem 002</a></li>
-          <li><a href="problems/003.html">Problem 003</a></li>
-          <li><a href="problems/004.html">Problem 004</a></li>
-          <li><a href="problems/005.html">Problem 005</a></li>
-          <li><a href="problems/006.html">Problem 006</a></li>
-          <li><a href="problems/007.html">Problem 007</a></li>
-          <li><a href="problems/008.html">Problem 008</a></li>
-          <li><a href="problems/009.html">Problem 009</a></li>
-          <li><a href="problems/010.html">Problem 010</a></li>
-          <li><a href="problems/011.html">Problem 011</a></li>
-          <li><a href="problems/012.html">Problem 012</a></li>
-          <li><a href="problems/013.html">Problem 013</a></li>
-          <li><a href="problems/014.html">Problem 014</a></li>
-          <li><a href="problems/015.html">Problem 015</a></li>
-          <li><a href="problems/016.html">Problem 016</a></li>
-          <li><a href="problems/017.html">Problem 017</a></li>
-          <li><a href="problems/018.html">Problem 018</a></li>
-          <li><a href="problems/019.html">Problem 019</a></li>
-        </ul>
-      </div>
-    </body>
+          <li><a id="p1" href="problems/001.html">Problem 001: Pass/Fail (Difficulty of 5)</a></li>
+          <li><a id="p2" href="problems/002.html">Problem 002: AEIOU (Difficulty of 5)</a></li>
+          <li><a id="p3" href="problems/003.html">Problem 003: SufFIX (Difficulty of 10)</a></li>
+          <li><a id="p4" href="problems/004.html">Problem 004: Rock, Paper, Scissors (Difficulty of 15)</a></li>
+          <li><a id="p5" href="problems/005.html">Problem 005: Collatz Conjecture (Difficulty of 20)</a></li>
+          <li><a id="p6" href="problems/006.html">Problem 006: Space Station Repair Lights (Difficulty of 25)</a></li>
+          <li><a id="p7" href="problems/007.html">Problem 007: Palindrome Series (Difficulty of 35)</a></li>
+          <li><a id="p8" href="problems/008.html">Problem 008: Apollo 13 (Difficulty of 35)</a></li>
+          <li><a id="p9" href="problems/009.html">Problem 009: Are Eucliding Me? (Difficulty of 40)</a></li>
+          <li><a id="p10" href="problems/010.html">Problem 010: Bishop’s Move (Difficulty of 45)</a></li>
+          <li><a id="p11" href="problems/011.html">Problem 011: Chroma Key Effect (Difficulty of 50)</a></li>
+          <li><a id="p12" href="problems/012.html">Problem 012: Sieve of Eratosthenes (Difficulty of 50)</a></li>
+          <li><a id="p13" href="problems/013.html">Problem 013: Peoplebook (Difficulty of 55)</a></li>
+          <li><a id="p14" href="problems/014.html">Problem 014: ZIPPER text (Difficulty of 60)</a></li>
+          <li><a id="p15" href="problems/015.html">Problem 015: Piecewise Encrypter (Difficulty of 55)</a></li>
+          <li><a id="p16" href="problems/016.html">Problem 016: Twinkle Twinkle (Difficulty of 65)</a></li>
+          <li><a id="p17" href="problems/017.html">Problem 017: Tic Tac Toe Checker (Difficulty of 40)</a></li>
+          <li><a id="p18" href="problems/018.html">Problem 018: Dominating Disney (Difficulty of 90)</a></li>
+          <li><a id="p19" href="problems/019.html">Problem 019: It’s an Enigma! (Difficulty of 85)</a></li>    </body>
+          <li><a id="p20" href="problems/020.html">Problem 020: Is There an Echo In Here? (Difficulty of 5)</a></li>
+          <li><a id="p21" href="problems/021.html">Problem 021: Something’s Missng (Difficulty of 10)</a></li>
+          <li><a id="p22" href="problems/022.html">Problem 022: Addiply (Difficulty of 5)</a></li>
+          <li><a id="p23" href="problems/023.html">Problem 023: Fibonacci (Difficulty of 15)</a></li>
+          <li><a id="p24" href="problems/024.html">Problem 024: Donor Sort (Difficulty of 25)</a></li>
+          <li><a id="p25" href="problems/025.html">Problem 025: Charlie Quebec (Difficulty of 25)</a></li>
+          <li><a id="p26" href="problems/026.html">Problem 026: Batter Up! (Difficulty of 25)</a></li>
+          <li><a id="p27" href="problems/027.html">Problem 027: Mission to Mars (Difficulty of 35)</a></li>
+          <li><a id="p28" href="problems/028.html">Problem 028: Encode Quest (Difficulty of 40)</a></li>
+          <li><a id="p29" href="problems/029.html">Problem 029: Home Keys (Difficulty of 55)</a></li>
+          <li><a id="p30" href="problems/030.html">Problem 030: Drow Lasrever (Difficulty of 45)</a></li>
+          <li><a id="p31" href="problems/031.html">Problem 031: Compounding the Problem (Difficulty of 70)</a></li>
+          <li><a id="p32" href="problems/032.html">Problem 032: A Virtual Issue (Difficulty of 65)</a></li>
+          <li><a id="p33" href="problems/033.html">Problem 033: Catalog It! (Difficulty of 80)</a></li>
+          <li><a id="p34" href="problems/034.html">Problem 034: Dollar Bill Poker (Difficulty of 75)</a></li>
+          <li><a id="p35" href="problems/035.html">Problem 035: Scrambled Equations (Difficulty of 80)</a></li>
+          <li><a id="p36" href="problems/036.html">Problem 036: Tic Tac Toe (Difficulty of 95)</a></li>
+          <li><a id="p37" href="problems/037.html">Problem 037: Under Pressure (Difficulty of 100)</a></li>
 </html>
