--- a/cqdat/problems/001.html
+++ b/cqdat/problems/001.html
@@ -14,7 +14,7 @@
     </head>
     <body>
       <h1 id="statement">Problem 001: Pass/Fail</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 1</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 1<br>This problem has a difficulty of 5.</em></p>      <p id="ptext">       <br>
        Students stress about their grades.  It’s only natural, because grades are important!  However, many universities offer the option to take certain classes as pass/fail.  Generally speaking, if you get a grade of 70 or above, you pass.  Otherwise, you fail.<br>
        <br>
        Your job is to write a program to read in a list of grades and determine if the student earning that grade passed or failed the class.<br>
