--- a/cqdat/problems/002.html
+++ b/cqdat/problems/002.html
@@ -14,7 +14,7 @@
     </head>
     <body>
       <h1 id="statement">Problem 002: AEIOU</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 2</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 2<br>This problem has a difficulty of 5.</em></p>      <p id="ptext">       <br>
       </p><h1 id="spec">Introduction</h1><p id="ptext"><br>
        <br>
        The English alphabet contains five vowels – A, E, I, O, and U.  The other 21 letters of the alphabet are called consonants.  Vowels are like the glue to the English language – without them, our words would be unpronounceable!  As a result, they are together the most common letters in the English language.<br>
