--- a/cqdat/problems/003.html
+++ b/cqdat/problems/003.html
@@ -14,7 +14,7 @@
     </head>
     <body>
       <h1 id="statement">Problem 003: SufFIX</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 3</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 3<br>This problem has a difficulty of 10.</em></p>      <p id="ptext">       <br>
        English is a strange language.  We say "first," "second," and "third," but then almost every number after that ends in "th" – "fourth," "fifth," "sixth."  Why can’t they all be the same?<br>
        <br>
        For this problem, someone has tried to "fix" a bunch of ordinal number abbreviations by changing "1st" to "1th," "2nd" to "2th," and so on, and we need you to fix them back.  Solve this quickly and you may end up in firth – I mean, first – place!<br>
@@ -51,7 +51,7 @@
        22nd<br>
        <br>
 
-     </p> 
+     </p>
 
     </body>
 </html>
