--- a/cqdat/problems/004.html
+++ b/cqdat/problems/004.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 004: Rock, Paper, Scissors</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 4</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 4</em><br>This problem has a difficulty of 15.</p>      <p id="ptext">       <br>
        Rock, Paper, Scissors is a simple game typically played head to head by two players.  The players in unison say "rock, paper, scissors" and simultaneously form one of those three shapes with their hand.  The winner is determined by comparing hands where ROCK beats SCISSORS, SCISSORS beats PAPER, and PAPER beats ROCK.<br>
        <br>
        For this problem, you are going to be determining the winner of a series of ROCK/PAPER/SCISSORS showdowns.  Simple, right?  However, to make this more interesting, we are going to allow for a random number of players in each round (2 or more).  <br>
