--- a/cqdat/problems/006.html
+++ b/cqdat/problems/006.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 006: Space Station Repair Lights</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 6</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 6<br>This problem has a difficulty of 25.</em></p>      <p id="ptext">       <br>
        You’ve been hired to work on a systems diagnostic unit for the International Space Station.  This unit will monitor four critical systems – a Battery, a Heat Exchanger, a Water Pump, and a Temperature Sensor – to determine if they are working or not.  However, space is at a premium on the ISS, and so you will only have room for two LED lights for the astronauts to see!<br>
        <br>
        Your team has come up with a design that will allow the astronauts to determine which systems, if any, are broken based on the colors of the two LED lights.  Each system you’re monitoring is given a numerical value based on how critical it is to the operation and safety of the station:<br>
