--- a/cqdat/problems/007.html
+++ b/cqdat/problems/007.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 007: Palindrome Series</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 7</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 7<br>This problem has a difficulty of 35.</em></p>      <p id="ptext">       <br>
        A palindrome is a word, a number, or a sequence of symbols or elements which reads the same forward or backward (case is not sensitive meaning ‘a’ is the same as ‘A’).<br>
        <br>
        For example, the following are palindromes:<br>
