--- a/cqdat/problems/008.html
+++ b/cqdat/problems/008.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 008: Apollo 13</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 8</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 8<br>This problem has a difficulty of 35.</em></p>      <p id="ptext">       <br>
        "Houston, we’ve had a problem…"<br>
        <br>
        Those are words that nobody at NASA Mission Control ever wants to hear, but they were famously said on April 13th, 1970, during the Apollo 13 Mission.  Just moments before, an electrical fault had caused the explosion of one of the oxygen tanks on the spacecraft carrying three astronauts to the Moon.  The loss of oxygen was causing the Command Module to rapidly lose power.  The only hope for survival for the three astronauts was to climb into the undamaged but much smaller Lunar Module and use it as a lifeboat to return to Earth.<br>
