--- a/cqdat/problems/009.html
+++ b/cqdat/problems/009.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 009: Are Eucliding Me?</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 9</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 9<br>This problem has a difficulty of 40.</em></p>      <p id="ptext">       <br>
        Coprime integers are used as values in some cryptographic algorithms such as RSA.  Two integers are coprime if their greatest common divisor (GCD) is 1.  There are many ways to calculate the GCD of two numbers.  The Greek mathematician Euclid developed an algorithm, known today as the Euclidean algorithm or Euclid’s algorithm, to calculate the GCD of two integers.  There are many ways to implement this algorithm, and one way is using successive subtraction like this:<br>
        <br>
        When you have a subtraction problem in the form A – B = C, the letter A is called the minuend, the letter B is called the subtrahend, and the letter C is called the difference.  The following is a summary of each iteration of the algorithm:<br>
