--- a/cqdat/problems/010.html
+++ b/cqdat/problems/010.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 010: Bishop’s Move</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 10</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 10<br>This problem has a difficulty of 45.</em></p>      <p id="ptext">       <br>
        Chess is a well-known and well-studied game.  Thousands of computer programs have been written about chess.  Some play the game interactively, while others analyze and predict strategies.  One thing is certain: if you don’t know how the chess pieces move, your program will not be any good.<br>
        <br>
        For this problem, we are going to take a look at a chess piece called the bishop.  The bishop can move any number of squares, but it has to move diagonally in a straight line.  Also, what fun is a standard chess board?  We are going to be using boards of random size.  One good thing though: your bishop will be the only piece on the board.<br>
