--- a/cqdat/problems/011.html
+++ b/cqdat/problems/011.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 011: Chroma Key Effect</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 11</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 11<br>This problem has a difficulty of 50.</em></p>      <p id="ptext">       <br>
        In computer graphics, images on your screen are made up of small dots called pixels.  Each of these pixels gets its color as a combination of primary colors such as Red + Green + Blue (RGB) or Cyan + Magenta + Yellow + Black (CMYK).<br>
        <br>
        <br>
