--- a/cqdat/problems/012.html
+++ b/cqdat/problems/012.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 012: Sieve of Eratosthenes</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 12</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 12<br>This problem has a difficulty of 50.</em></p>      <p id="ptext">       <br>
        A prime number is an integer whose only factors are one and itself.  There are two generally primitive methods to determine if a number is prime.  You can select an arbitrary number and test through factorization, or you can find a prime number through a number field sieve. <br>
        <br>
        A Greek mathematician by the name of Eratosthenes developed an algorithm that will find all prime numbers up to a specified limit.  This algorithm is known as the Sieve of Eratosthenes.<br>
