--- a/cqdat/problems/013.html
+++ b/cqdat/problems/013.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 013: Peoplebook</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 13</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 13<br>This problem has a difficulty of 55.</em></p>      <p id="ptext">       <br>
        In a world where technology connects people in ways that never existed before, it can be hard to keep track of everyone!  Since most of your friends now have various social media accounts such as Instagram and Twitter, as well as a mobile number and email address, sometimes it’s hard to remember them all.<br>
        <br>
        To solve this problem, write a program that acts as a dictionary for people!<br>
