--- a/cqdat/problems/014.html
+++ b/cqdat/problems/014.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 014: ZIPPER text</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 14</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 14<br>This problem has a difficulty of 60.</em></p>      <p id="ptext">       <br>
        Did you know that the zipper was invented by an Electrical Engineer?  Maybe that’s the reason some parents say things like "you can major in whatever you want to in college, as long as it has the word engineering at the end".  Anyway, the zipper has been holding together fabric and material since 1913.  Today, you will tackle the zipper text cipher, which holds two different messages in one.<br>
        <br>
        The zipper text cipher takes two messages – one in upper case letters, and the other in lower case letters – and zips them up into a single encoded message.  Your task will be to decode such a message.<br>
