--- a/cqdat/problems/015.html
+++ b/cqdat/problems/015.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 015: Piecewise Encrypter</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 15</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 15<br>This problem has a difficulty of 55.</em></p>      <p id="ptext">       <br>
        In math, a piecewise function is defined by multiple sub-functions, with each sub function applying to different input values.  Your task today is to create a piecewise encrypter!<br>
        <br>
        You were asked to create a program to encrypt a piece of text.  You will be given a set of alphabetic letters to encode.  Each alphabetic letter will be encoded by first being translated into a number as follows:<br>
