--- a/cqdat/problems/016.html
+++ b/cqdat/problems/016.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 016: Twinkle Twinkle</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 16</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 16<br>This problem has a difficulty of 65.</em></p>      <p id="ptext">       <br>
        You are working on a drawing program and you have been tasked with creating a function to draw star shapes.  The program already has the capability to draw line segments between points so all you need to do is calculate the coordinates for the vertices of the star.  The number of vertices in a star is double the number of the star’s points, so a five-pointed star will have ten vertices: five on the tips of the star’s points, and five in between the points.  You can draw a circle through all the vertices on the star’s points and another smaller circle through all the vertices between the points.  The center point of both circles is the same as the center point of the star.  The angles between the star’s vertices relative to the center are the all the same and add up to 360 degrees or 2π radians.  You can take advantage of these facts to calculate the coordinates of the star’s vertices using the formula for the coordinates of a point on a circle:<br>
        <br>
        <img src="../pics/016_A.png" class="center">
