--- a/cqdat/problems/017.html
+++ b/cqdat/problems/017.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 017: Tic Tac Toe Checker</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 17</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 17<br>This problem has a difficulty of 40.</em></p>      <p id="ptext">       <br>
        Tic-tac-toe is a game for two players, X and O, who take turns marking the spaces in a 3 x 3 grid.  The player who succeeds in placing three of their marks in a horizontal, vertical or diagonal row wins the game.<br>
        <br>
        The following example game is won by the first player, X:<br>
