--- a/cqdat/problems/018.html
+++ b/cqdat/problems/018.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 018: Dominating Disney</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 18</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 18<br>This problem has a difficulty of 90.</em></p>      <p id="ptext">       <br>
        Your family is going to Disney World in Orlando, FL during the busiest time of the year, so it’s up to you to plan the most efficient way to hit the most popular rides: Pirates of the Caribbean, Seven Dwarfs Mine Train, Space Mountain, and Splash Mountain.  Your challenge is to find the quickest way to navigate through crowds, parked strollers, and character Meet-and-Greets.<br>
        <br>
        The map below shows the locations of all four rides and the paths that lead to them.  You will be given the amount of time it takes to walk each path.  If there is ever a tie between two or more paths, choose the path that starts with the smallest Path #.  For example, if Path #1 > Path #2 > Path #4 > Path #6 takes the same amount of time as Path #7 > Path #6 > Path #4 > Path #2, you should choose the first option.  Sometimes it may be fastest to revisit a ride to which you’ve already been!<br>
