--- a/cqdat/problems/005.html
+++ b/cqdat/problems/005.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../styles.css">
     </head>
     <body>    <h1 id="statement">Problem 005: Collatz Conjecture</h1>
-      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 5</em></p>      <p id="ptext">       <br>
+      <p id="sub">    <em>Problem made by Lockheed Martin, is CodeQuest 2018 Problem 5</em><br>This problem has a difficulty of 20.</p>      <p id="ptext">       <br>
        Can you believe that there are some math problems that still remain unsolved today?  The Collatz Conjecture is one such problem.<br>
        <br>
        To create a Collatz Sequence, start with any positive integer n.  Each term in the sequence is derived from the previous term using the following rules: if the previous term is even, then the next term is one half the previous term.  Otherwise, the next term is 3 times the previous term plus 1.  The Collatz Conjecture states that no matter what value you pick for n, the series will eventually reach the number 1.<br>
