--- a/cqdat/problempage.html
+++ b/cqdat/problempage.html
@@ -64,4 +64,21 @@
           <li><a id="p35" href="problems/035.html">Problem 035: Scrambled Equations (Difficulty of 80)</a></li>
           <li><a id="p36" href="problems/036.html">Problem 036: Tic Tac Toe (Difficulty of 95)</a></li>
           <li><a id="p37" href="problems/037.html">Problem 037: Under Pressure (Difficulty of 100)</a></li>
+          <li><a id="p38" href="problems/038.html">Problem 038: I’m Board (Difficulty of 5)</a></li>
+          <li><a id="p39" href="problems/039.html">Problem 039: Change for the World (Difficulty of 20)</a></li>
+          <li><a id="p40" href="problems/040.html">Problem 040: What Triangle Is This? (Difficulty of 10)</a></li>
+          <li><a id="p41" href="problems/041.html">Problem 041: Anagram Checker (Difficulty of 15)</a></li>
+          <li><a id="p42" href="problems/042.html">Problem 042: Mobile Miser (Difficulty of 20)</a></li>
+          <li><a id="p43" href="problems/043.html">Problem 043: Who’s the Valedictorian? (Difficulty of 30)</a></li>
+          <li><a id="p44" href="problems/044.html">Problem 044: Secret Message (Difficulty of 30)</a></li>
+          <li><a id="p45" href="problems/045.html">Problem 045: Muddled Music (Difficulty of 50)</a></li>
+          <li><a id="p46" href="problems/046.html">Problem 046: Navigating the World (Difficulty of 45)</a></li>
+          <li><a id="p47" href="problems/047.html">Problem 047: GCAS (Difficulty of 45)</a></li>
+          <li><a id="p48" href="problems/048.html">Problem 048: Encryption (Difficulty of 50)</a></li>
+          <li><a id="p49" href="problems/049.html">Problem 049: Message Integrity (Difficulty of 55)</a></li>
+          <li><a id="p50" href="problems/050.html">Problem 050: Commutative Combo! (Difficulty of 65)</a></li>
+          <li><a id="p51" href="problems/051.html">Problem 051: Turkey! (Difficulty of 65)</a></li>
+          <li><a id="p52" href="problems/052.html">Problem 052: Tower of Hanoi (Difficulty of 65)</a></li>
+          <li><a id="p53" href="problems/053.html">Problem 053: Interstellar Travel (Difficulty of 95)</a></li>
+          <li><a id="p54" href="problems/054.html">Problem 054: Honeycomb (Difficulty of 95)</a></li>
 </html>
