--- a/cqdat/problempage.html
+++ b/cqdat/problempage.html
@@ -81,4 +81,19 @@
           <li><a id="p52" href="problems/052.html">Problem 052: Tower of Hanoi (Difficulty of 65)</a></li>
           <li><a id="p53" href="problems/053.html">Problem 053: Interstellar Travel (Difficulty of 95)</a></li>
           <li><a id="p54" href="problems/054.html">Problem 054: Honeycomb (Difficulty of 95)</a></li>
+          <li><a id="p55" href="problems/055.html">Problem 055: Monogram (Difficulty of 5)</a></li>
+          <li><a id="p56" href="problems/056.html">Problem 056: Grains of Sand (Difficulty of 5)</a></li>
+          <li><a id="p57" href="problems/057.html">Problem 057: Leap Year (Difficulty of 15)</a></li>
+          <li><a id="p58" href="problems/058.html">Problem 058: Is It Hot in Here? (Difficulty of 25)</a></li>
+          <li><a id="p59" href="problems/059.html">Problem 059: Money, Money, Money! (Difficulty of 35)</a></li>
+          <li><a id="p60" href="problems/060.html">Problem 060: Word Worm (Difficulty of 55)</a></li>
+          <li><a id="p61" href="problems/061.html">Problem 061: Aerospace Intruders (Difficulty of 50)</a></li>
+          <li><a id="p62" href="problems/062.html">Problem 062: Carrier Landing (Difficulty of 50)</a></li>
+          <li><a id="p63" href="problems/063.html">Problem 063: Reflection (Difficulty of 60)</a></li>
+          <li><a id="p64" href="problems/064.html">Problem 064: 40 – Love (Difficulty of 40)</a></li>
+          <li><a id="p65" href="problems/065.html">Problem 065: Soundex Encoding (Difficulty of 65)</a></li>
+          <li><a id="p66" href="problems/066.html">Problem 066: Hamming Code (Difficulty of 75)</a></li>
+          <li><a id="p67" href="problems/067.html">Problem 067: Sky Scraper (Difficulty of 85)</a></li>
+          <li><a id="p68" href="problems/068.html">Problem 068: CSI (Difficulty of 90)</a></li>
+          <li><a id="p69" href="problems/069.html">Problem 069: RPN (Difficulty of 100)</a></li>
 </html>
