--- a/cqdat/problempage.html
+++ b/cqdat/problempage.html
@@ -96,4 +96,37 @@
           <li><a id="p67" href="problems/067.html">Problem 067: Sky Scraper (Difficulty of 85)</a></li>
           <li><a id="p68" href="problems/068.html">Problem 068: CSI (Difficulty of 90)</a></li>
           <li><a id="p69" href="problems/069.html">Problem 069: RPN (Difficulty of 100)</a></li>
+          <li><a id="p70" href="problems/070.html">Problem 070: When I Say Code, You Say Quest! (Difficulty of 5)</a></li>
+          <li><a id="p71" href="problems/071.html">Problem 071: Deal the Cards (Difficulty of 20)</a></li>
+          <li><a id="p72" href="problems/072.html">Problem 072: Valley Sort (Difficulty of 15)</a></li>
+          <li><a id="p73" href="problems/073.html">Problem 073: Pig Latin (Difficulty of 35)</a></li>
+          <li><a id="p74" href="problems/074.html">Problem 074: Book Worm (Difficulty of 25)</a></li>
+          <li><a id="p75" href="problems/075.html">Problem 075: Product of a Grid (Difficulty of 35)</a></li>
+          <li><a id="p76" href="problems/076.html">Problem 076: Morse Code (Difficulty of 45)</a></li>
+          <li><a id="p77" href="problems/077.html">Problem 077: Rectangle Art (Difficulty of 55)</a></li>
+          <li><a id="p78" href="problems/078.html">Problem 078: Check Please! (Difficulty of 50)</a></li>
+          <li><a id="p79" href="problems/079.html">Problem 079: All Aboard! (Difficulty of 50)</a></li>
+          <li><a id="p80" href="problems/080.html">Problem 080: Spiral Text (Difficulty of 60)</a></li>
+          <li><a id="p81" href="problems/081.html">Problem 081: Caesar Scytale (Difficulty of 55)</a></li>
+          <li><a id="p82" href="problems/082.html">Problem 082: Diamond Path (Difficulty of 80)</a></li>
+          <li><a id="p83" href="problems/083.html">Problem 083: 3D Bingo (Difficulty of 70)</a></li>
+          <li><a id="p84" href="problems/084.html">Problem 084: Pretty Print   (Difficulty of 95)</a></li>
+          <li><a id="p85" href="problems/085.html">Problem 085: Treasure Hunt (Difficulty of 100)</a></li>
+          <li><a id="p86" href="problems/086.html">Problem 086: File I/O (Difficulty of 5)</a></li>
+          <li><a id="p87" href="problems/087.html">Problem 087: Mirror, Mirror (Difficulty of 10)</a></li>
+          <li><a id="p88" href="problems/088.html">Problem 088: File Extensions (Difficulty of 15)</a></li>
+          <li><a id="p89" href="problems/089.html">Problem 089: Sort Numbers (Difficulty of 10)</a></li>
+          <li><a id="p90" href="problems/090.html">Problem 090: Software Removal (Difficulty of 20)</a></li>
+          <li><a id="p91" href="problems/091.html">Problem 091: Golf Scores (Difficulty of 25)</a></li>
+          <li><a id="p92" href="problems/092.html">Problem 092: Making Change (Difficulty of 30)</a></li>
+          <li><a id="p93" href="problems/093.html">Problem 093: n choose k (Difficulty of 25)</a></li>
+          <li><a id="p94" href="problems/094.html">Problem 094: The Three M's (Difficulty of 30)</a></li>
+          <li><a id="p95" href="problems/095.html">Problem 095: IP Addresses (Difficulty of 40)</a></li>
+          <li><a id="p96" href="problems/096.html">Problem 096: Camel Case (Difficulty of 45)</a></li>
+          <li><a id="p97" href="problems/097.html">Problem 097: XML (Difficulty of 45)</a></li>
+          <li><a id="p98" href="problems/098.html">Problem 098: Encode / Decode (Difficulty of 50)</a></li>
+          <li><a id="p99" href="problems/099.html">Problem 099: Word Search (Difficulty of 60)</a></li>
+          <li><a id="p100" href="problems/100.html">Problem 100: Authenticate Logins (Difficulty of 80)</a></li>
+          <li><a id="p101" href="problems/101.html">Problem 101: Bingo! (Difficulty of 70)</a></li>
+          <li><a id="p102" href="problems/102.html">Problem 102: Thinning (Difficulty of 90)</a></li>
 </html>
